5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1644_2704.log
== TEST (2019-04-11 17:06:04) 
-- CODE:
nota=float(input("Qual foi a sua nota?: "))
boni=input("VAi reecber bonificacao?: ")
if (boni = "S"):
	mensagem = nota + nota*0.1
else:
	mensagem = nota
print(mensagem)	
-- ERROR:
File "XXXX", line 3
    if (boni = "S"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:06:33) 
-- CODE:
nota=float(input("Qual foi a sua nota?: "))
boni=input("VAi reecber bonificacao?: ")
if(boni = "S"):
	mensagem = nota + nota*0.1
else:
	mensagem = nota
print(mensagem)	
-- ERROR:
File "XXXX", line 3
    if(boni = "S"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:07:02) 
-- CODE:
nota=float(input("Qual foi a sua nota?: "))
boni=input("VAi reecber bonificacao?: ")
if (boni = "S"):
	mensagem = nota + nota*0.1
else:
	mensagem = nota
print(mensagem)	
-- EXECUTION TIME:
0.183438
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 3
    if (boni = "S"):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:07:03) 
-- CODE:
nota=float(input("Qual foi a sua nota?: "))
boni=input("VAi reecber bonificacao?: ")
if (boni = "S"):
	mensagem = nota + nota*0.1
else:
	mensagem = nota
print(mensagem)	
-- ERROR:
File "XXXX", line 3
    if (boni = "S"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:07:42) 
-- CODE:
nota=float(input("Qual foi a sua nota?: "))
b=input("VAi reecber bonificacao?: ")
if (b = "S"):
	mensagem = nota + nota*0.1
else:
	mensagem = nota
print(mensagem)	
-- ERROR:
File "XXXX", line 3
    if (b = "S"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:24:05) 
-- CODE:
nota=float(input("Qual foi a sua nota?: "))
b=input("VAi reecber bonificacao?: ")
if (b = "S"):
	mensagem = nota + nota*0.1
else:
	mensagem = nota
print(mensagem)	
-- ERROR:
File "XXXX", line 3
    if (b = "S"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:24:45) 
-- CODE:
nota=float(input("Qual foi a sua nota?: "))
boni=input("VAi reecber bonificacao?: ")
if (boni = "S"):
	mensagem = nota + nota*0.1
else:
	mensagem = nota
print(mensagem)	
-- ERROR:
File "XXXX", line 3
    if (boni = "S"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:24:59) 
-- CODE:
nota=float(input("Qual foi a sua nota?: "))
boni=input("VAi reecber bonificacao?: ")
if(boni = "S"):
	mensagem = nota + nota*0.1
else:
	mensagem = nota
print(mensagem)	
-- ERROR:
File "XXXX", line 3
    if(boni = "S"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:26:53) 
-- CODE:
nota=float(input("Qual foi a sua nota?: "))
boni=input("VAi reecber bonificacao?: ")
if( boni== "S"):
	mensagem = nota + nota*0.1
else:
	mensagem = nota
print(mensagem)	
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:27:11) 
-- CODE:
nota=float(input("Qual foi a sua nota?: "))
boni=input("VAi reecber bonificacao?: ")
if( boni== "S"):
	mensagem = nota + nota*0.1
else:
	mensagem = nota
print(mensagem)	
-- EXECUTION TIME:
0.201647
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
